# exqudens-py-pytest

./: .gitignore  CMakeLists.txt  CMakePresets.json  pyproject.toml  readme.md
cmake/: util.cmake  vscode.cmake
src/: pyproject.toml
src/main/py/: application.py  main.py
src/main/py/exqudens/pytest/: __init__.py  application.py  plugin.py
src/main/resources/py/: __runtime_hook.py  utils.py
src/main/resources/spec/: exqudens_pytest_spec.py  spec_utils.py
src/test/py/: conftest.py
src/test/py/unit/: test_application.py  test_other.py
src/test/resources/fake-projects/project-1/: test_1.py
src/test/resources/fake-projects/project-1/util/: convert_utils.py
src/test/resources/vscode/: launch.json  settings.json
