[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "exqudens-pytest"
dynamic = ["version"]
description = "Exqudens PyTest Application"
requires-python = ">=3"
dependencies = [
    "pytest==7.3.1" # latest: 8.3.4
]

[project.optional-dependencies]
app = [
    "stdlib-list==0.11.0",
    "pyinstaller==6.11.1"
]
test = [
    "pylint==3.3.2"
]

[tool.pdm.version]
source = "file"
path = "src/main/py/exqudens/pytest/__init__.py"

[tool.pdm.build]
includes = ["src/main/py/exqudens"]
package-dir = "src/main/py"
